// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonTypography component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <span
    class="emotion-0"
  >
    Hello
  </span>
</div>
`;

exports[`Headline component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-headline-fontSize);
  line-height: var(--pbl-theme-typography-headline-lineHeight);
  margin-bottom: var(--pbl-theme-typography-headline-marginBottom);
}

<div>
  <h2
    class="emotion-0"
  >
    Hello
  </h2>
</div>
`;

exports[`InfoBold component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-infoBold-fontSize);
  line-height: var(--pbl-theme-typography-infoBold-lineHeight);
  font-weight: var(--pbl-theme-typography-infoBold-fontWeight);
  margin-bottom: var(--pbl-theme-typography-infoBold-marginBottom);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`InfoText component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-info-fontSize);
  line-height: var(--pbl-theme-typography-info-lineHeight);
  margin-bottom: var(--pbl-theme-typography-info-marginBottom);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Paragraph component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-paragraph-fontSize);
  line-height: var(--pbl-theme-typography-paragraph-lineHeight);
  margin-bottom: var(--pbl-theme-typography-paragraph-marginBottom);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`ParagraphBold component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-paragraphBold-fontSize);
  line-height: var(--pbl-theme-typography-paragraphBold-lineHeight);
  font-weight: var(--pbl-theme-typography-paragraphBold-fontWeight);
  margin-bottom: var(--pbl-theme-typography-paragraphBold-marginBottom);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Subtitle component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  margin-bottom: var(--pbl-theme-typography-subtitle-marginBottom);
}

<div>
  <h4
    class="emotion-0"
  >
    Hello
  </h4>
</div>
`;

exports[`Title component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-title-fontSize);
  line-height: var(--pbl-theme-typography-title-lineHeight);
  margin-bottom: var(--pbl-theme-typography-title-marginBottom);
}

<div>
  <h3
    class="emotion-0"
  >
    Hello
  </h3>
</div>
`;

exports[`Typography component with variant button Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <span
    class="emotion-0"
  >
    Hello
  </span>
</div>
`;

exports[`Typography component with variant button Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: 0;
}

<div>
  <span
    class="emotion-0"
  >
    Hello
  </span>
</div>
`;

exports[`Typography component with variant headline Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-headline-fontSize);
  line-height: var(--pbl-theme-typography-headline-lineHeight);
  margin-bottom: var(--pbl-theme-typography-headline-marginBottom);
}

<div>
  <h2
    class="emotion-0"
  >
    Hello
  </h2>
</div>
`;

exports[`Typography component with variant headline Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-headline-fontSize);
  line-height: var(--pbl-theme-typography-headline-lineHeight);
  margin-bottom: 0;
}

<div>
  <h2
    class="emotion-0"
  >
    Hello
  </h2>
</div>
`;

exports[`Typography component with variant info Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-info-fontSize);
  line-height: var(--pbl-theme-typography-info-lineHeight);
  margin-bottom: var(--pbl-theme-typography-info-marginBottom);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant info Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-info-fontSize);
  line-height: var(--pbl-theme-typography-info-lineHeight);
  margin-bottom: 0;
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant infoBold Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-infoBold-fontSize);
  line-height: var(--pbl-theme-typography-infoBold-lineHeight);
  font-weight: var(--pbl-theme-typography-infoBold-fontWeight);
  margin-bottom: var(--pbl-theme-typography-infoBold-marginBottom);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant infoBold Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-infoBold-fontSize);
  line-height: var(--pbl-theme-typography-infoBold-lineHeight);
  font-weight: var(--pbl-theme-typography-infoBold-fontWeight);
  margin-bottom: 0;
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant paragraph Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-paragraph-fontSize);
  line-height: var(--pbl-theme-typography-paragraph-lineHeight);
  margin-bottom: var(--pbl-theme-typography-paragraph-marginBottom);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant paragraph Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-paragraph-fontSize);
  line-height: var(--pbl-theme-typography-paragraph-lineHeight);
  margin-bottom: 0;
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant paragraphBold Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-paragraphBold-fontSize);
  line-height: var(--pbl-theme-typography-paragraphBold-lineHeight);
  font-weight: var(--pbl-theme-typography-paragraphBold-fontWeight);
  margin-bottom: var(--pbl-theme-typography-paragraphBold-marginBottom);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant paragraphBold Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-paragraphBold-fontSize);
  line-height: var(--pbl-theme-typography-paragraphBold-lineHeight);
  font-weight: var(--pbl-theme-typography-paragraphBold-fontWeight);
  margin-bottom: 0;
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant subtitle Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  margin-bottom: var(--pbl-theme-typography-subtitle-marginBottom);
}

<div>
  <h4
    class="emotion-0"
  >
    Hello
  </h4>
</div>
`;

exports[`Typography component with variant subtitle Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  margin-bottom: 0;
}

<div>
  <h4
    class="emotion-0"
  >
    Hello
  </h4>
</div>
`;

exports[`Typography component with variant title Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-title-fontSize);
  line-height: var(--pbl-theme-typography-title-lineHeight);
  margin-bottom: var(--pbl-theme-typography-title-marginBottom);
}

<div>
  <h3
    class="emotion-0"
  >
    Hello
  </h3>
</div>
`;

exports[`Typography component with variant title Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-title-fontSize);
  line-height: var(--pbl-theme-typography-title-lineHeight);
  margin-bottom: 0;
}

<div>
  <h3
    class="emotion-0"
  >
    Hello
  </h3>
</div>
`;

exports[`Typography component with variant undefined Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-paragraph-fontSize);
  line-height: var(--pbl-theme-typography-paragraph-lineHeight);
  margin-bottom: var(--pbl-theme-typography-paragraph-marginBottom);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant undefined Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-paragraph-fontSize);
  line-height: var(--pbl-theme-typography-paragraph-lineHeight);
  margin-bottom: 0;
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;
